--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221025225204">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221027162735">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -223,39 +223,45 @@
 				</div>
 			</section>
 			<section class="page__projects projects">
-				<div class="projects__container">
+				<div class="projects ">
 
 					<h2 class="projects__title _title">Наши работы</h2>
 					<div data-speed="0.01" class="projects__body">
 						<div class="projects__items _gallery">
 							<div class="projects__column">
-								<div class="projects__row row-projects row-furniture_left-top">
+								<div class="projects__row row-projects row-projects_left-top">
 									<a href="img/projects/09.jpg" class="row-projects__item"><img src="img/for gallery/1.png" alt="Image"></a>
 									<a href="img/projects/01.jpg" class="row-projects__item"><img src="img/for gallery/3.png" alt="Image"></a>
 									<a href="img/projects/02.jpg" class="row-projects__item"><img src="img/for gallery/5.png" alt="Image"></a>
 								</div>
-								<div class="furniture__row row-projects row-furniture_left-bottom">
+								<div class="projects__row row-projects row-projects_left-bottom">
 									<a href="img/projects/04.jpg" class="row-projects__item"><img src="img/for gallery/2.png" alt="Image"></a>
 									<a href="img/projects/06.jpg" class="row-projects__item"><img src="img/for gallery/4.png" alt="Image"></a>
-									<a href="img/projects/07.jpg" class="row-projects__item"><img src="img/for gallery/6.png" alt="Image"></a>
-									<a href="img/projects/07.jpg" class="row-projects__item"><img src="img/for gallery/6.png" alt="Image"></a>
+									<div class=" special ">
+										<a href="img/projects/07.jpg" class="row-projects__item "><img src="img/for gallery/6.png" alt="Image"></a>
+										<a href="img/projects/07.jpg" class="row-projects__item "><img src="img/for gallery/7.png" alt="Image"></a>
+									</div>
 								</div>
 							</div>
 							<div class="projects__column">
 								<div class="projects__row row-projects row-projects_center">
-									<a href="img/projects/03.jpg" class="row-furniture__item"><img src="img/for gallery/7.png" alt="Image"></a>
+									<a href="img/projects/03.jpg" class="row-projects__item margin-center"><img src="img/for gallery/8.png" alt="Image"></a>
+									<a href="img/projects/03.jpg" class="row-projects__item"><img src="img/for gallery/9.png" alt="Image"></a>
 								</div>
 							</div>
 							<div class="projects__column">
 								<div class="projects__row row-projects row-projects_right-top">
-									<a href="img/projects/04.jpg" class="row-projects__item"><img src="img/for gallery/8.png" alt="Image"></a>
-									<a href="img/projects/05.jpg" class="row-projects__item"><img src="img/for gallery/9.png" alt="Image"></a>
-									<a href="img/projects/01.jpg" class="row-projects__item"><img src="img/for gallery/10.png" alt="Image"></a>
+									<div class=" special ">
+										<a href="img/projects/07.jpg" class="row-projects__item "><img src="img/for gallery/10.png" alt="Image"></a>
+										<a href="img/projects/07.jpg" class="row-projects__item "><img src="img/for gallery/11.png" alt="Image"></a>
+									</div>
+									<a href="img/projects/05.jpg" class="row-projects__item"><img src="img/for gallery/14.png" alt="Image"></a>
+									<a href="img/projects/01.jpg" class="row-projects__item"><img src="img/for gallery/16.png" alt="Image"></a>
 								</div>
 								<div class="projects__row row-projects row-projects_right-bottom">
-									<a href="img/projects/08.jpg" class="row-projects__item"><img src="img/for gallery/11.png" alt="Image"></a>
-									<a href="img/projects/09.jpg" class="row-projects__item"><img src="img/for gallery/12.png" alt="Image"></a>
-									<a href="img/projects/06.jpg" class="row-projects__item"><img src="img/for gallery/15.png" alt="Image"></a>
+									<a href="img/projects/08.jpg" class="row-projects__item"><img src="img/for gallery/12.png" alt="Image"></a>
+									<a href="img/projects/09.jpg" class="row-projects__item"><img src="img/for gallery/15.png" alt="Image"></a>
+									<a href="img/projects/06.jpg" class="row-projects__item"><img src="img/for gallery/17.png" alt="Image"></a>
 								</div>
 							</div>
 						</div>
@@ -278,7 +284,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221025225204"></script>
+	<script src="js/app.min.js?_v=20221027162735"></script>
 </body>
 
 </html>
