--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221027231354">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221028164348">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
 					<button type="button" class="menu__icon icon-menu"><span></span></button>
 					<div class="menu__burger"></div>
 					<div class="logo">
-						LOGO
+						Eco-Maf
 					</div>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
@@ -62,13 +62,13 @@
 					<div class="main__wrapper swiper-wrapper">
 
 						<div class="main__slide swiper-slide">
-							<img src="img/pictures/first__screen/3.jpg" alt="">
+							<img src="img/pictures/first__screen/3_1.webp" alt="">
 						</div>
 						<div class="main__slide swiper-slide">
-							<img src="img/pictures/first__screen/001_1920x0_b56.jpg" alt="">
+							<img src="img/pictures/first__screen/001_1920x0_b56_1.webp" alt="">
 						</div>
 						<div class="main__slide swiper-slide">
-							<img src="img/pictures/first__screen/1620778679_70-p-detskie-ploshchadki-proekti-foto-79.jpg" alt="">
+							<img src="img/pictures/first__screen/1620778679_70-p-detskie-ploshchadki-proekti-foto-79_1.webp" alt="">
 						</div>
 					</div>
 
@@ -124,7 +124,7 @@
 									dolor cursus. Enim, aliquet venenatis euismod vitae ut.</li>
 							</ul>
 						</div>
-						<div class="advantages__picture picture"><img src="img/pictures/aurora-landscaping-baldivis-grove.png" alt=""></div>
+						<div class="advantages__picture picture"><img src="img/pictures/aurora-landscaping-baldivis-grove.webp" alt=""></div>
 					</div>
 				</div>
 			</section>
@@ -383,7 +383,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="footer__column">
-					<div class=" logo">LOGO</div>
+					<div class=" logo">Eco-Maf</div>
 					<div class="footer__orgnip footer-text">ОГРНИП: 320619600093738</div>
 					<div class="footer__inn footer-text">ИНН: 615424440529</div>
 					<div class="footer__bik footer-text">БИК: 046015602</div>
@@ -450,7 +450,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221027231354"></script>
+	<script src="js/app.min.js?_v=20221028164348"></script>
 </body>
 
 </html>
