pre__finish__first__page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221028164348">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221028231358">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,6 +28,20 @@
 							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
 							<li class="menu__item"><a href="" data-goto-header data-goto=".advantages" class="menu__link">Преимущества</a></li>
 							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
+								<ul class="menu__sub-list">
+									<li class="menu__sub-item">
+										<a href="" class="menu__sub-link">Пункт</a>
+									</li>
+									<li class="menu__sub-item">
+										<a href="" class="menu__sub-link">Пункт</a>
+									</li>
+									<li class="menu__sub-item">
+										<a href="" class="menu__sub-link">Пункт</a>
+									</li>
+									<li class="menu__sub-item">
+										<a href="" class="menu__sub-link">Пункт</a>
+									</li>
+								</ul>
 							</li>
 							<li class="menu__item"><a href="" data-goto-header data-goto=".page__projects" class="menu__link">Наши
 									работы</a></li>
@@ -41,8 +55,8 @@
 					<div data-da=".menu__burger, 480" class="header__contact">
 						<div class="header__phone"><a href="tel:+7(908)1231213">+7 (908)-123-12-13</a></div>
 						<div class="header__links links">
-							<img src="img/icons/telegram_logo.svg" alt="">
-							<img src="img/icons/whatsapp_logo.svg" alt="">
+
+							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
 
@@ -77,11 +91,11 @@
 
 				</div>
 				<div class="main__content">
-					<div class="main__title">TITLE</div>
-					<div class="main__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas quam quisque
-						congue tincidunt nibh. Scelerisque
-						fermentum imperdiet egestas mollis proin adipiscing ut. Aliquet pretium netus at nisi sed libero
-						congue.</div>
+					<div class="main__title">Эко-МАФ</div>
+					<div class="main__subtitle">Добро пожаловать в Эко-МАФ — наша компания занимается производством
+						оборудования для детских площадок,
+						уличных тренажеров и вооркаут площадкок. За плечами мы имеем большой опыт в своей сфере. Ниже вы
+						сможете найти всю необходимую вам информацию.</div>
 				</div>
 
 			</section>
@@ -92,14 +106,14 @@
 					</div>
 					<div class="aboutUs__content">
 						<div class="aboutUs__text text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id turpis eget mi. Tortor
-								rhoncus nibh ut lectus
-								egestas malesuada. Id amet, commodo massa ut. Egestas cursus lorem netus elit consectetur odio.
-								Lacus, dolor convallis praesent ac odio diam nunc. Eu pellentesque tincidunt auctor nunc donec
-								dolor urna id porta.
-								Scelerisque laoreet orci, arcu cursus. Tellus id elit velit gravida sed vestibulum. Viverra et
-								cursus in amet blandit
-								dolor cursus. Enim, aliquet venenatis euismod vitae ut.</p>
+							<p>С нашей компанией Вам будет легко сотрудничать!
+								Сопровождаем Ваш заказ на всех этапах. Вам не придется беспокоиться о том, как идут дела.
+
+
+								У нас есть художники и дизайнеры, они помогут оформить игровой комплекс с учетом вашего
+								помещения. Или создадут
+								индивидуальный дизайн.
+								Узкие специалисты монтажа, с легкостью осуществляющие монтаж сложных конструкций.</p>
 						</div>
 						<div class="aboutUs__picture picture"><img src="img/pictures/DSC05204.jpg" alt=""></div>
 					</div>
@@ -113,15 +127,12 @@
 					<div class="advantages__content">
 						<div class="advantages__text text">
 							<ul class="advantages__list">
-								<li class="advantages__point">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-									id turpis eget mi. Tortor rhoncus nibh ut lectus
-									egestas malesuada. Id amet, commodo massa ut. Egestas cursus lorem netus elit consectetur
-									odio.</li>
-								<li class="advantages__point">Lacus, dolor convallis praesent ac odio diam nunc. Eu pellentesque
-									tincidunt auctor nunc donec.</li>
-								<li class="advantages__point">Scelerisque laoreet orci, arcu cursus. Tellus id elit velit
-									gravida sed vestibulum. Viverra et cursus in amet blandit
-									dolor cursus. Enim, aliquet venenatis euismod vitae ut.</li>
+								<li class="advantages__point">Осуществляем производство игровых комплексов любой сложности.</li>
+								<li class="advantages__point">Доставка в любой конец города.</li>
+								<li class="advantages__point">Большое количество положительных отзывов от реальных клиентов.
+								</li>
+								<li class="advantages__point">Не заставим вас долго ждать. Как только вы оставите заявку, наш
+									менеджер сразу с вами свяжется и уточнит детали заказа.</li>
 							</ul>
 						</div>
 						<div class="advantages__picture picture"><img src="img/pictures/aurora-landscaping-baldivis-grove.webp" alt=""></div>
@@ -148,7 +159,7 @@
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										TITLE
+										"В стране сказок"
 									</div>
 									<div class="slide__description">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
@@ -157,7 +168,7 @@
 									</div>
 								</div>
 
-								<div class="slide__button"><a class="" href=""> <span>Показать еще</span></a></div>
+
 
 							</div>
 						</div>
@@ -167,7 +178,7 @@
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										TITLE
+										"Мир фантазий"
 									</div>
 									<div class="slide__description">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
@@ -176,7 +187,7 @@
 									</div>
 								</div>
 
-								<a class="slide__button" href=""> <span>Показать еще</span></a>
+
 
 							</div>
 						</div>
@@ -186,7 +197,7 @@
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										TITLE
+										"Солнечный город"
 									</div>
 									<div class="slide__description">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
@@ -195,7 +206,7 @@
 									</div>
 								</div>
 
-								<a class="slide__button" href=""> <span>Показать еще</span></a>
+
 
 							</div>
 						</div>
@@ -205,7 +216,7 @@
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										TITLE
+										"Солнечная полянка"
 									</div>
 									<div class="slide__description">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
@@ -214,7 +225,7 @@
 									</div>
 								</div>
 
-								<a class="slide__button" href=""> <span>Показать еще</span></a>
+
 
 							</div>
 						</div>
@@ -224,7 +235,7 @@
 							<div class="slide__content">
 								<div class="slide__text">
 									<div class="slide__title">
-										TITLE
+										"Галактика"
 									</div>
 									<div class="slide__description">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio esse culpa possimus enim,
@@ -233,7 +244,7 @@
 									</div>
 								</div>
 
-								<div class=""><a class="slide__button" href=""> <span>Показать еще</span></a></div>
+
 
 							</div>
 						</div>
@@ -241,6 +252,7 @@
 
 					</div>
 				</div>
+				<div class="__container"><a class="slide__button" href=""> <span>Показать еще</span></a> </div>
 			</section>
 			<section class="page__projects projects">
 				<div class="projects ">
@@ -305,42 +317,58 @@
 					<div class="reviews__slider reviews-swiper">
 						<div class="reviews__wrapper swiper-wrapper">
 							<div class="reviews__slide swiper-slide">
-								<div class="reviews__name  "> Шевченко Николай</div>
+								<div class="reviews__name  "> Сергей Александрович</div>
 								<div class="reviews__company review-text">Компания: Институт им.Чехова</div>
-								<div class="reviews__city review-text">Город: Таганрог</div>
+								<div class="reviews__city review-text">Город: Шахты</div>
 								<div class="reviews__description review-text">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempus, orci pharetra faucibus leo,
-									diam. Tristique tincidunt urna mi risus vestibulum interdum. Pellentesque fermentum tortor
-									congue elementum ante neque neque. Enim elit laoreet integer diam pretium. Nec erat feugiat
-									lorem adipiscing eu pellentesque adipiscing. Et dictum morbi risus metus, vestibulum cursus
-									pellentesque. Metus, varius ipsum viverra ac urna ac purus. Sagittis, placerat vestibulum
-									cras mi sapien.
+									Несмотря на самые сжатые сроки компания справилась без ущерба качеству поставив и установив
+									игровое оборудование на
+									детских площадках. Детвора рада новым местам отдыха в нашем муниципальном образовании. После
+									факта вандализма над
+									детским оборудованием производитель Эко-МАФ оперативно доставил и заменил сломанную деталь.
+
+									Честная компания, стоит работать!
 								</div>
 							</div>
 							<div class="reviews__slide swiper-slide">
-								<div class="reviews__name  "> Шевченко Николай</div>
+								<div class="reviews__name  "> Михаил Андреевич</div>
 								<div class="reviews__company review-text">Компания: Институт им.Чехова</div>
 								<div class="reviews__city review-text">Город: Таганрог</div>
 								<div class="reviews__description review-text">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempus, orci pharetra faucibus leo,
-									diam. Tristique tincidunt urna mi risus vestibulum interdum. Pellentesque fermentum tortor
-									congue elementum ante neque neque. Enim elit laoreet integer diam pretium. Nec erat feugiat
-									lorem adipiscing eu pellentesque adipiscing. Et dictum morbi risus metus, vestibulum cursus
-									pellentesque. Metus, varius ipsum viverra ac urna ac purus. Sagittis, placerat vestibulum
-									cras mi sapien.
+									Заказывали песочницы с крышками и игровой домик. Срок поставки с установкой малых игровых
+									форм составил 14 дней.
+									Качество оборудования и монтажа порадовали, будем сотрудничать с Заводом детского игрового и
+									спортивного оборудования
+									Эко-МАФ и дальше.
 								</div>
 							</div>
 							<div class="reviews__slide swiper-slide">
-								<div class="reviews__name"> Шевченко Николай</div>
+								<div class="reviews__name"> Дмитрий Владимирович</div>
 								<div class="reviews__company review-text">Компания: Институт им.Чехова</div>
-								<div class="reviews__city review-text">Город: Таганрог</div>
+								<div class="reviews__city review-text">Город: Ростов-на-Дону</div>
 								<div class="reviews__description review-text">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tempus, orci pharetra faucibus leo,
-									diam. Tristique tincidunt urna mi risus vestibulum interdum. Pellentesque fermentum tortor
-									congue elementum ante neque neque. Enim elit laoreet integer diam pretium. Nec erat feugiat
-									lorem adipiscing eu pellentesque adipiscing. Et dictum morbi risus metus, vestibulum cursus
-									pellentesque. Metus, varius ipsum viverra ac urna ac purus. Sagittis, placerat vestibulum
-									cras mi sapien.
+									Из нескольких производителей малых игровых форм для детского сада выбрали Завод детского
+									игрового и спортивного
+									оборудования Эко-МАФ и не прогадали. Качество и срок нас приятно удивил особенно с учетом
+									заказа
+									в конце года. Раньше
+									покупали у разных поставщиков детского уличного оборудования, но теперь покупать только у
+									этого производителя.
+								</div>
+							</div>
+							<div class="reviews__slide swiper-slide">
+								<div class="reviews__name"> Андрей Дмитриевич</div>
+								<div class="reviews__company review-text">Компания: Институт им.Чехова</div>
+								<div class="reviews__city review-text">Город: Тагнрог</div>
+								<div class="reviews__description review-text">
+									Хочется отметить высокий профессионализм руководства и сотрудников Завода детского игрового и
+									спортивного оборудования
+									МАФ. Приятно работать с профессионалами своего дела, которые способны держать качество и
+									слово на высоком уровне! Все
+									необходимое детское игровое оборудование поставлено и установлено в соответствующий срок.
+
+									Желаем Вам успешного развития, продолжайте осваивать новые горизонты, радуйте новых
+									заказчиков и довольных детей!
 								</div>
 							</div>
 
@@ -348,31 +376,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="request">
-				<div class="request__container">
-					<div class="request__title title">Оставить заявку</div>
-					<form class="forms">
-						<div class="request__item">
-							<label for="input">Ваше имя*</label>
-							<input placeholder=" " id="requestName" type="text" name="name" class="request__input  ">
-						</div>
-						<div class="request__item">
-							<label for="input">Номер телефона*</label>
-							<input placeholder=" " id="requestTel" type="tel" name="Tel" class="request__input  ">
-						</div>
-						<div class="request__item">
-							<label for="input">Email*</label>
-							<input placeholder=" " id="feedbackTel" type="Email" name="mail" class="request__input  ">
-						</div>
-						<div class="request__item">
-							<label for="input">Доп.информация*</label>
-							<textarea placeholder=" " id="feedbackText" type="text" name="Text" class="request__input  "></textarea>
-						</div>
 
-						<button type="submit" class="button">Отправить</button>
-					</form>
-				</div>
-			</section>
 			<section class="map">
 				<div class="map__container">
 					<div class="map__title title">Мы на карте</div>
@@ -396,8 +400,8 @@
 				</div>
 				<div class="footer__column">
 					<div class="footer__links links">
-						<img src="img/icons/telegram_logo.svg" alt="">
-						<img src="img/icons/whatsapp_logo.svg" alt="">
+
+						<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 					</div>
 					<a data-goto-header data-goto=".main" class="footer__goTop footer-text">Вернуться в начало <img src="img/icons/Chevron_Up.svg" alt=""> </a>
 				</div>
@@ -433,13 +437,14 @@
 								</button>
 								<div class="header__links links">
 									<img src="img/icons/telegram_logo.svg" alt="">
-									<img src="img/icons/whatsapp_logo.svg" alt="">
+									<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 								</div>
 							</div>
 						</form>
 						<div class="popup__text">
 							<p>
-								Нажимая на кнопку «Отправить», я даю свое согласие на обработку персональных данных, в соответствии с <a>
+								Нажимая на кнопку «Отправить», я даю свое согласие на обработку персональных данных, в соответствии
+								с <a>
 									Политикой
 									конфиденциальности
 								</a>
@@ -450,7 +455,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221028164348"></script>
+	<script src="js/app.min.js?_v=20221028231358"></script>
 </body>
 
 </html>
