--- a/index.html
+++ b/index.html
@@ -30,44 +30,44 @@
 							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
-										<a href="../rocking-courusels.html" class="menu__sub-link">Качалки</a>
+										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../carousels.html" class="menu__sub-link">Карусели</a>
+										<a href="./carousels.html" class="menu__sub-link">Карусели</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../swing.html" class="menu__sub-link">Качели</a>
+										<a href="./swing.html" class="menu__sub-link">Качели</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../slides.html" class="menu__sub-link">Горки</a>
+										<a href="./slides.html" class="menu__sub-link">Горки</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../sandbox.html" class="menu__sub-link">Песочницы</a>
+										<a href="./sandbox.html" class="menu__sub-link">Песочницы</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../houses.html" class="menu__sub-link">Ограждения/Домики-беседки</a>
+										<a href="./houses.html" class="menu__sub-link">Ограждения/Домики-беседки</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../cars.html" class="menu__sub-link">Машинки,
+										<a href="./cars.html" class="menu__sub-link">Машинки,
 											Паровозики</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../gaming-complexes.html" class="menu__sub-link">Детские игровые
+										<a href="./gaming-complexes.html" class="menu__sub-link">Детские игровые
 											Комплексы
 										</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
+										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
 											комплексы</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../sport-equip.html" class="menu__sub-link">Спортивное оборудования</a>
+										<a href="./sport-equip.html" class="menu__sub-link">Спортивное оборудования</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../benches.html" class="menu__sub-link">Скамейки детские</a>
+										<a href="./benches.html" class="menu__sub-link">Скамейки детские</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../benches.html" class="menu__sub-link">Другое</a>
+										<a href="./benches.html" class="menu__sub-link">Другое</a>
 									</li>
 								</ul>
 							</li>
