--- a/slides.html
+++ b/slides.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221029231421">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030110113">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,44 +30,44 @@
 							<li class="menu__item"><a href="" data-goto-header data-goto=".catalog" class="menu__link">Каталог</a>
 								<ul class="menu__sub-list">
 									<li class="menu__sub-item">
-										<a href="../rocking-courusels.html" class="menu__sub-link">Качалки</a>
+										<a href="./rocking-courusels.html" class="menu__sub-link">Качалки</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../carousels.html" class="menu__sub-link">Карусели</a>
+										<a href="./carousels.html" class="menu__sub-link">Карусели</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../swing.html" class="menu__sub-link">Качели</a>
+										<a href="./swing.html" class="menu__sub-link">Качели</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../slides.html" class="menu__sub-link">Горки</a>
+										<a href="./slides.html" class="menu__sub-link">Горки</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../sandbox.html" class="menu__sub-link">Песочницы</a>
+										<a href="./sandbox.html" class="menu__sub-link">Песочницы</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../houses.html" class="menu__sub-link">Ограждения/Домики-беседки</a>
+										<a href="./houses.html" class="menu__sub-link">Ограждения/Домики-беседки</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../cars.html" class="menu__sub-link">Машинки,
+										<a href="./cars.html" class="menu__sub-link">Машинки,
 											Паровозики</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../gaming-complexes.html" class="menu__sub-link">Детские игровые
+										<a href="./gaming-complexes.html" class="menu__sub-link">Детские игровые
 											Комплексы
 										</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
+										<a href="./gymnastics-complexes.html" class="menu__sub-link">Детские гимнастический
 											комплексы</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../sport-equip.html" class="menu__sub-link">Спортивное оборудования</a>
+										<a href="./sport-equip.html" class="menu__sub-link">Спортивное оборудования</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../benches.html" class="menu__sub-link">Скамейки детские</a>
+										<a href="./benches.html" class="menu__sub-link">Скамейки детские</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="../benches.html" class="menu__sub-link">Другое</a>
+										<a href="./benches.html" class="menu__sub-link">Другое</a>
 									</li>
 								</ul>
 							</li>
@@ -468,7 +468,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221029231421"></script>
+	<script src="js/app.min.js?_v=20221030110113"></script>
 </body>
 
 </html>
