--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030110113">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030120009">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,9 +20,9 @@
 				<div class="header__menu menu">
 					<button type="button" class="menu__icon icon-menu"><span></span></button>
 					<div class="menu__burger"></div>
-					<div class="logo">
+					<a href="./index.html" class="logo">
 						Eco-Maf
-					</div>
+					</a>
 					<nav data-da=".menu__burger, 1160" class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item"><a href="" data-goto-header data-goto=".aboutUs" class="menu__link">О нас</a></li>
@@ -67,7 +67,7 @@
 										<a href="./benches.html" class="menu__sub-link">Скамейки детские</a>
 									</li>
 									<li class="menu__sub-item">
-										<a href="./benches.html" class="menu__sub-link">Другое</a>
+										<a href="./other.html" class="menu__sub-link">Другое</a>
 									</li>
 								</ul>
 							</li>
@@ -121,8 +121,7 @@
 				<div class="main__content">
 					<div class="main__title">Эко-МАФ</div>
 					<div class="main__subtitle">Добро пожаловать в Эко-МАФ — наша компания занимается производством
-						оборудования для детских площадок,
-						уличных тренажеров и вооркаут площадкок. За плечами мы имеем большой опыт в своей сфере. Ниже вы
+						оборудования для детских площадок. За плечами мы имеем большой опыт в своей сфере. Ниже вы
 						сможете найти всю необходимую вам информацию.</div>
 				</div>
 
@@ -415,7 +414,9 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="footer__column">
-					<div class=" logo">Eco-Maf</div>
+					<a href="./index.html" class="logo">
+						Eco-Maf
+					</a>
 					<div class="footer__orgnip footer-text">ОГРНИП: 320619600093738</div>
 					<div class="footer__inn footer-text">ИНН: 615424440529</div>
 					<div class="footer__bik footer-text">БИК: 046015602</div>
@@ -431,7 +432,7 @@
 
 						<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 					</div>
-					<a data-goto-header data-goto=".main" class="footer__goTop footer-text">Вернуться в начало <img src="img/icons/Chevron_Up.svg" alt=""> </a>
+					<a data-goto-header data-goto="main" class="footer__goTop footer-text">Вернуться в начало <img src="img/icons/Chevron_Up.svg" alt=""> </a>
 				</div>
 			</div>
 		</footer>
@@ -483,7 +484,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221030110113"></script>
+	<script src="js/app.min.js?_v=20221030120009"></script>
 </body>
 
 </html>
