add__menu and impruve header

--- a/gymnastics-complexes.html
+++ b/gymnastics-complexes.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221030120009">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221030141505">
 
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -80,10 +80,11 @@
 									заявку</a></li>
 						</ul>
 					</nav>
-					<div data-da=".menu__burger, 480" class="header__contact">
+					<div class="header__contact">
 						<div class="header__phone"><a href="tel:+7(908)1231213">+7 (908)-123-12-13</a></div>
-						<div class="header__links links">
 
+						<div class="header__links links">
+							<a href="tel:+7(908)1231213" class="header__phone icon"><img class="phone__header  " src="img/icons/Phone.svg" alt=""></a>
 							<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
 						</div>
 					</div>
@@ -94,7 +95,7 @@
 		<!--Header-->
 		<main class="page catalog">
 			<div class="popup__btn">
-				<a href="#" data-popup="#popup"><img src="img/icons/Chat.svg" alt=""></a>
+				<img src="img/icons/Chat.svg" alt="">
 			</div>
 
 			<section class="page__products products">
@@ -616,54 +617,8 @@
 			</div>
 		</footer>
 	</div>
-	<div id="popup" aria-hidden="true" class="popup">
-		<div class="popup__wrapper">
-			<div class="popup__content">
 
-
-				<div data-close class="close__popup"></div>
-				<div class="popup__items">
-					<div class="callback__content">
-						<h2 class="form__title">Заказать звонок</h2>
-						<h2 class="form__subtitle">Впишите свои данные, и мы свяжемся с Вами. Ваши данные ни при каких
-							обстоятельствах не будут переданы третьим лицам.</h2>
-						<form action="index.html" class="form">
-
-
-							<div class="form__item">
-
-								<input id="formName" placeholder="Ваше имя" type="text" name="name" class="form__input _req">
-							</div>
-							<div class="form__item">
-
-								<input id="formTel" placeholder="+7 (977) 777-77-77" type="text" name="Tel" class="form__input _req">
-							</div>
-
-							<div class="popup__links">
-								<button type="submit" class="send">Отправить
-
-								</button>
-								<div class="header__links links">
-
-									<a aria-label="Chat on WhatsApp" href="https://wa.me/79613091930"><img src="img/icons/whatsapp_logo.svg" alt=""> </a>
-								</div>
-							</div>
-						</form>
-						<div class="popup__text">
-							<p>
-								Нажимая на кнопку «Отправить», я даю свое согласие на обработку персональных данных, в соответствии
-								с <a>
-									Политикой
-									конфиденциальности
-								</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<script src="js/app.min.js?_v=20221030120009"></script>
+	<script src="js/app.min.js?_v=20221030141505"></script>
 </body>
 
 </html>
