--- a/cars.html
+++ b/cars.html
@@ -94,10 +94,19 @@
 		</header>
 		<!--Header-->
 		<main class="page catalog">
-			<div class="popup__btn">
-				<img src="img/icons/Chat.svg" alt="">
+			<div class="chat">
+				<div class="content__type">
+					<a href="tel:+7(908)1231213" class="content__catalog content-point"><img class="phone" src="img/icons/Phone.svg"
+							alt=""></a>
+					<a href="https://wa.me/79613091930" class="content__list content-point"><img src="img/icons/whatsapp_logo.svg"
+							alt=""></a>
+				</div>
+				<div data-add class="chat__icon">
+					<img data-add class="open" src="img/icons/Chat.svg" alt="">
+					<img data-add class="close" src="img/icons/Close_LG.svg" alt="">
+			
+				</div>
 			</div>
-
 			<section class="page__products products">
 
 				<div class="products__container _container">
